# obs-multisource-effect

./: CMakeLists.txt  README.md  azure-pipelines.yml
ci/: forum-update-info.json
ci/linux/: install-dependencies-ubuntu.sh
data/examples/: add-alpha.effect  add.effect  colorburn-alpha.effect  colorburn.effect  colordodge-alpha.effect  colordodge.effect  divide-alpha.effect  divide.effect  hard-light-alpha.effect  linearburn-alpha.effect  linearburn.effect  multiply-alpha.effect  multiply.effect  overlay-alpha.effect  screen-alpha.effect  screen.effect  soft-light-alpha.effect  subtract.effect  vertical-16.effect
src/: multisource-effect.c
